@@ -34,6 +34,20 @@ typedef double double_t;	/* `double' expressions are evaluated as
 # define FP_ILOGB0	(-2147483647)
 # define FP_ILOGBNAN	2147483647
 
+/* The GCC 4.6 compiler will define __FP_FAST_FMA{,F,L} if the fma{,f,l}
+   builtins are supported.  */
+#if __FP_FAST_FMA
+# define FP_FAST_FMA 1
+#endif
+
+#if __FP_FAST_FMAF
+# define FP_FAST_FMAF 1
+#endif
+
+#if __FP_FAST_FMAL
+# define FP_FAST_FMAL 1
+#endif
+
 #endif	/* ISO C99 */
 
 #ifndef __NO_LONG_DOUBLE_MATH
