@@ -61,4 +61,8 @@ typedef double double_t;
 # define FP_ILOGB0	(-2147483647)
 # define FP_ILOGBNAN	(2147483647)
 
+/* The powerpc has a combined multiply/add instruction.  */
+# define FP_FAST_FMA 1
+# define FP_FAST_FMAF 1
+
 #endif	/* ISO C99 */
